feat: Implementado delete de especialidade e documentação swagger.
